
Since build 223:
----------------
* Everything is now build with the Windows 8.1 SDK. While this should typically
  be invisible, it is mentioned because it might explain obscure issues that
  creep in, so it should be explicitly called out as a change.
  On the plus side, this makes building the extensions far simpler.

Since build 222:
----------------
* pywin32.pth now arranges for the pywin32_system32 directory to be on
  PATH to help with pypi installations (thanks to @xovian via #1153)

Since build 221:
----------------
* !! Moved to github for development !!. https://github.com/mhammond/pywin32
  is the new home of pywin32 and all builds will be released there.
  The build process now also builds "wheels", so "pip install pywin32" should
  also work (but see README.md for some limitiations of using pip)

  Particular thanks to @xoviat, who helped with prompting me to make the
  change, imported all the issues from sourceforge, and helped with the
  process for creating the wheels.

  As a part of this, I've changed every issue in this file from "#xxx" to
  "#sfxxx" to indicate they refer to the old sourceforge issue numbers.

* Older Python versions are no longer supported - builds are only made
  available for Python 2.7 and Python 3.5+.

* For Python 3.x, a win32 FILETIME or TimeStamp which is greater than the
  datetime module can handle will return datetime.datetime.max instead of
  throwing (fixes issue #748)

* win32file - fix ERROR_BAD_LENGTH in GetFileInformationByHandleEx
  in x86 builds(issue #752, rbschk)

* MakeModuleForTypelib no longer catches COM exceptions, so no longer can
  return None. This is what the docstring always claimed the behaviour was
  and makes things less error prone. If you explicitly call this function and
  handle None, you will need to wrap the call in an exception handler.

* Change PyIMAPIFolder CopyMessages, DeleteMessages, and EmptyFolder to return
  the HRESULT (Nick Czeczulin via patch #sf162)
